force-app/main/default/objects/QuoteItem__c/QuoteItem__c.object-meta.xml
<CustomObject>
    <label>Quote Item</label>
    <nameField>
        <displayFormat>QI-{0000000}</displayFormat>
        <label>Quote Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>