force-app/main/default/objects/QuoteItem__c/fields/AdjustedUnitCost__c.field-meta.xml
<CustomField>
    <fullName>AdjustedUnitCost__c</fullName>
    <label>Adjusted Unit Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>