force-app/main/default/objects/QuoteItem__c/fields/AdjustedUnitPrice__c.field-meta.xml
<CustomField>
    <fullName>AdjustedUnitPrice__c</fullName>
    <label>Adjusted Unit Price</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>