force-app/main/default/objects/QuoteItem__c/fields/AdjustmentId__c.field-meta.xml
<CustomField>
    <fullName>AdjustmentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjustment</label>
    <referenceTo>Adjustment__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>