force-app/main/default/objects/QuoteItem__c/fields/CurrencyConversionRatio__c.field-meta.xml
<CustomField>
    <fullName>CurrencyConversionRatio__c</fullName>
    <formula>QuoteId__r.CurrencyConversionRatio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Conversion Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>