force-app/main/default/objects/QuoteItem__c/fields/DerivedFromId__c.field-meta.xml
<CustomField>
    <fullName>DerivedFromId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Derived From</label>
    <referenceTo>QuoteItem__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItemVersions</relationshipName>
    <type>Lookup</type>
</CustomField>