force-app/main/default/objects/QuoteItem__c/fields/EffectiveDiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDiscountPercent__c</fullName>
    <label>Effective Discount %</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>