force-app/main/default/objects/QuoteItem__c/fields/ExtendedAmount__c.field-meta.xml
<CustomField>
    <fullName>ExtendedAmount__c</fullName>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>