force-app/main/default/objects/QuoteItem__c/fields/ExtendedCost__c.field-meta.xml
<CustomField>
    <fullName>ExtendedCost__c</fullName>
    <label>Extended Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>