force-app/main/default/objects/QuoteItem__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>The billing frequency associated with the recurring price</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Project Start</fullName>
            </value>
            <value>
                <fullName>Project End</fullName>
            </value>
            <value>
                <fullName>Phase End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>