force-app/main/default/objects/QuoteItem__c/fields/LineType__c.field-meta.xml
<CustomField>
    <fullName>LineType__c</fullName>
    <label>Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resource</fullName>
                <default>true</default>
                <label>Resource</label>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>