force-app/main/default/objects/QuoteItem__c/fields/LocationDisplayName__c.field-meta.xml
<CustomField>
    <fullName>LocationDisplayName__c</fullName>
    <label>Location Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>