force-app/main/default/objects/QuoteItem__c/fields/NetExtendedAmount__c.field-meta.xml
<CustomField>
    <fullName>NetExtendedAmount__c</fullName>
    <label>Net Extended Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>