force-app/main/default/objects/QuoteItem__c/fields/NextDisplaySequence__c.field-meta.xml
<CustomField>
    <fullName>NextDisplaySequence__c</fullName>
    <label>Next Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>