force-app/main/default/objects/QuoteItem__c/fields/NextSequence__c.field-meta.xml
<CustomField>
    <fullName>NextSequence__c</fullName>
    <label>Next Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>