force-app/main/default/objects/QuoteItem__c/fields/NonBillable__c.field-meta.xml
<CustomField>
    <fullName>NonBillable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked quote item will not be included in billing/pricing</description>
    <inlineHelpText
	>When checked this quote item will not be included in billing/pricing</inlineHelpText>
    <label>Non-billable</label>
    <type>Checkbox</type>
</CustomField>