force-app/main/default/objects/QuoteItem__c/fields/PriceMethod__c.field-meta.xml
<CustomField>
    <fullName>PriceMethod__c</fullName>
    <description>The price method</description>
    <label>Price Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Per Head</fullName>
            </value>
            <value>
                <fullName>Flat Price</fullName>
            </value>
            <value>
                <fullName>% of Cost</fullName>
            </value>
            <value>
                <fullName>% of Revenue</fullName>
            </value>
            <value>
                <fullName>Non-Billable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>