force-app/main/default/objects/QuoteItem__c/fields/PriceMethodMarkdown__c.field-meta.xml
<CustomField>
    <fullName>PriceMethodMarkdown__c</fullName>
    <description>The price factor to apply to the Price Method for % of pricing</description>
    <label>Price Method Markdown</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>