force-app/main/default/objects/QuoteItem__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>