force-app/main/default/objects/QuoteItem__c/fields/QuoteSectionId__c.field-meta.xml
<CustomField>
    <fullName>QuoteSectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Section</label>
    <referenceTo>QuoteSection__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>