force-app/main/default/objects/QuoteItem__c/fields/RateCardItemId__c.field-meta.xml
<CustomField>
    <fullName>RateCardItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card Item</label>
    <referenceTo>RateCardItem__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>QuoteItems</relationshipName>
    <type>Lookup</type>
</CustomField>