force-app/main/default/objects/QuoteItem__c/fields/RoleNameOverride__c.field-meta.xml
<CustomField>
    <fullName>RoleNameOverride__c</fullName>
    <label>Role Name Override</label>
    <length>255</length>
    <type>Text</type>
</CustomField>