force-app/main/default/objects/QuoteItem__c/fields/RowIdentifier__c.field-meta.xml
<CustomField>
    <fullName>RowIdentifier__c</fullName>
    <label>Row Identifier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>