force-app/main/default/objects/QuoteItem__c/fields/SectionSequence__c.field-meta.xml
<CustomField>
    <fullName>SectionSequence__c</fullName>
    <label>Section Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>