force-app/main/default/objects/QuoteItem__c/fields/UnadjustedExtendedAmount__c.field-meta.xml
<CustomField>
    <fullName>UnadjustedExtendedAmount__c</fullName>
    <label>Unadjusted Extended Amount</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>