force-app/main/default/objects/QuoteItem__c/fields/UnadjustedExtendedCost__c.field-meta.xml
<CustomField>
    <fullName>UnadjustedExtendedCost__c</fullName>
    <label>Unadjusted Extended Cost</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>